# scrq

./: CMakeLists.txt  README.txt
include/: host_device_common.h  mesh.h  scene.h  shader.h  vk_helpers.h  vk_types.h
scenes/: .hdr  Ajax.hdr  Book1Ch10.hdr  Book1Ch9.hdr  BuddhaCornellBox.hdr  Buddha_Cornell.hdr  Cornell_Box.hdr  MaterialCornellBox.hdr  MaterialTest.hdr  ShirleyBook1.hdr  SphereCornellBox.hdr  Sphere_Cornell_Box.hdr  Sponza-Buddha.hdr  Sponza_Buddha.hdr  Veach_Mats.hdr  Veach_Odyssey.hdr  book1.hdr  book2.hdr  book2Normal.hdr  ch10.hdr  ch11.hdr  ch14.hdr  ch6.hdr  ch8.hdr  ch9.hdr
shaders/: CmakeLists.txt  device_common.glsl  raytrace.comp.glsl  raytrace.spv  sampling.glsl
shaders/book1/: book1.comp.glsl  book1.spv
shaders/book2/: book2.comp.glsl  book2.spv
shaders/ch10/: ch10.comp.glsl  ch10.spv
shaders/ch11/: ch11.comp.glsl  ch11.spv
shaders/ch6/: ch6.comp.glsl  ch6.spv
shaders/ch8/: ch8.comp.glsl  ch8.spv
shaders/ch9/: ch9.comp.glsl  ch9.spv
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  mesh.h  vk_types.h
src/chapters/: CMakeLists.txt
src/chapters/book1/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/chapters/book2/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/chapters/ch10/: CMakeLists.txt  app.cpp
src/chapters/ch11/: CMakeLists.txt  app.cpp  app.h
src/chapters/ch6/: CMakeLists.txt  app.cpp  app.h
src/chapters/ch8/: CMakeLists.txt  app.cpp  app.h
src/chapters/ch9/: CMakeLists.txt  app.cpp  app.h  main.cpp
